ecmascript/parser/tests/typescript-errors/tsc/interfaces/interfaceDeclarations/interfaceThatInheritsFromItself/input.ts.stderr
error: Expected {, got implements
  --> $DIR/tests/typescript-errors/tsc/interfaces/interfaceDeclarations/interfaceThatInheritsFromItself/input.ts:10:15
   |
10 | interface Bar implements Bar { // error
   |               ^^^^^^^^^^

